add (compatible) version of jquery and popper as part of the package

--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "bootstrap": "^4.1.0",
     "clean-css-cli": "^4.1.10",
     "cpx": "^1.5.0",
+    "jquery": "^3.3.1",
     "node-sass": "^4.6.1",
     "npm-run-all": "^4.1.2",
+    "popper.js": "^1.14.3",
     "postcss-cli": "^5.0.0",
     "postcss-sass": "^0.3.1",
+    "postcss-syntax": "^0.10.0",
     "stylelint": "^9.2.0",
     "stylelint-config-recommended-scss": "^3.0.0",
     "stylelint-config-standard": "^18.0.0",
@@ -37,7 +40,10 @@
     "css-lint": "stylelint --config build/.stylelintrc --syntax scss \"scss/**/*.scss\"",
     "css-prefix": "postcss --config build/postcss.config.js --replace \"dist/css/*.css\"",
     "css-minify": "cleancss --level 1 --source-map --source-map-inline-sources --output dist/css/bootstrap.min.css dist/css/bootstrap.css && cleancss --level 1 --source-map --source-map-inline-sources --output dist/css/bootstrap-grid.min.css dist/css/bootstrap-grid.css && cleancss --level 1 --source-map --source-map-inline-sources --output dist/css/bootstrap-reboot.min.css dist/css/bootstrap-reboot.css",
-    "js": "cpx 'node_modules/bootstrap/dist/js/*' dist/js",
+    "js": "npm-run-all --parallel js-*",
+    "js-jquery": "cpx 'node_modules/jquery/dist/*' dist/js",
+    "js-popper": "cpx 'node_modules/popper.js/dist/umd/*' dist/js",
+    "js-bootstrap": "cpx 'node_modules/bootstrap/dist/js/*' dist/js",
     "dist": "npm-run-all --parallel css js",
     "postversion": "git push && git push --tags",
     "test": "npm-run-all dist"
